# bob-banking-app

./: .coveragerc  .env.example  .gitignore  IMPLEMENTATION_PLAN.md  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: banking-app-ci.yml
BACKEND/: app.py  config.py  models.py  requirements.txt  routes.py  services.py
FRONTEND/: dashboard.html  deposit.html  login.html  withdraw.html
FRONTEND/static/: styles.css
docs/: IMPLEMENTATION_PLAN.md  STEP_BY_STEP_IMPLEMENTATION_GUIDE.md  banking-app-build-plan.md
docs/demo-setup/: GITHUB-MCP-SETUP.md  mcp-github-template.json
tests/integration/: conftest.py  test_routes.py  test_security.py
tests/unit/: conftest.py  test_models.py  test_services.py
