[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "banking-app"
version = "1.0.0"
description = "SecureBank — a Flask banking demo application"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "Flask>=3.0",
    "Werkzeug>=3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
# Run from the project root: pytest tests/
testpaths = ["tests"]
# Always show short summary line
addopts = "-q --tb=short"
filterwarnings = [
    # Ignore file-handle warnings emitted by send_from_directory during tests
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::DeprecationWarning",
    "ignore::ResourceWarning",
]

[tool.coverage.run]
branch = true
source = ["BACKEND"]
omit = [
    "BACKEND/venv/*",
    "BACKEND/banking.db",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
